--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                
                 <h6> Interested in Joining? Check out our Fall 2022 Recruitment Timeline.</h6>
                 <div class="gap-2 col-6 mx-auto">
-                    <button type="button" class="btn btn-light"> <a href="join.html">JOIN US</a></button>
+                    <a href="join.html"> <button type="button" class="btn btn-light"> JOIN US</button></a>
                 </div>
 
             </section>
