--- a/leadership.html
+++ b/leadership.html
@@ -36,7 +36,7 @@
 
                                 <li><a href="#"><h3>About Us</h3></a></li>
                                 <li><a href="ucbmun.html">What is UCBMUN?</a></li>
-                                <li><a href="leadership.html">Officers' Board</a></li>
+                                <li><a href="leadership.html">Board of Officers</a></li>
                                 <li><a href="https://docs.google.com/document/d/1TJJq1Cjm3uMXHjnloVPIEo3bUJc6TtHijOoQKOkdrUw/edit">Constitution</a></li>
 
                                 <li><a href="travel.html"><h3>Travel Team</h3></a></li>
@@ -74,7 +74,7 @@
                     <a style="cursor: default">About Us<img src="images/dropdown.png" style="height: 2em ; width: 2em ; vertical-align: middle"></img></a>
                     <div id="dropdownee1" class="dropdownee">
                         <a href="ucbmun.html">What is UCBMUN?</a>
-                        <a href="leadership.html">Officers' Board</a>
+                        <a href="leadership.html">Board of Officers</a>
                         <a href="https://docs.google.com/document/d/1TJJq1Cjm3uMXHjnloVPIEo3bUJc6TtHijOoQKOkdrUw/edit">Constitution</a>
                     </div>
                 </li>
@@ -106,7 +106,7 @@
 				<!-- Main -->
 					<article id="main-a">
 						<header>
-							<h2>Officer's Board</h2>
+							<h2>Board of Officers/h2>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
