--- a/leadership.html
+++ b/leadership.html
@@ -106,7 +106,7 @@
 				<!-- Main -->
 					<article id="main-a">
 						<header>
-							<h2>Board of Officers/h2>
+							<h2>Board of Officers</h2>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
