bold questions on faq

--- a/faq.html
+++ b/faq.html
@@ -106,32 +106,32 @@
 						</header>
 						<section class="wrapper style5" id="nav-transition">
 						<div class="inner">
-						<p> <bold> What is the difference between UC Berkeley Model United Nations (UCBMUN) and Berkeley Model United Nations (BMUN)? </bold></p>
+						<p style="font-weight: bold; important!"> What is the difference between UC Berkeley Model United Nations (UCBMUN) and Berkeley Model United Nations (BMUN)? </p>
 						<p> Both UCBMUN and BMUN are debate organizations at Cal. However, they differ in their primary organizational objectives. UCBMUN competes as the official traveling Model UN debate team for the university, as well as hosts an annual college Model United Nations conference and a high school Model United Nations conference. Meanwhile, BMUN is a club that hosts a high school Model United Nations conference, but does not compete in conferences. </p>
 						<hr>
-						<p> <bold> What is the time commitment? </bold></p>
+						<p style="font-weight: bold; important!">  What is the time commitment? </p>
 						<p> UCBMUN meets weekly on Mondays from 7-9 PM PST, during which we have dedicated club-wide trainings. We also have a dedicated new member program to ensure all members, regardless of the background they come in to the club with, have an equal footing in terms of skills training as well as an opportunity to bond.
 							Besides these weekly meetings, each semester, all members are required to staff and travel to at least one away conference or attend BayMUN.  The most important commitment is a members ability to partake in our annual, four-day long UCBMUN Conference we hold every year in San Francisco.  On average, the typical UCBMUN member will commit around 4 hours a week during the Fall and roughly 6 during the first half of the Spring until the conference is over, after which the commitment goes back down to around 4.</p>
 						<hr>
-						<p> <bold> What is the BayMUN conference? </bold></p>
+						<p style="font-weight: bold; important!"> What is the BayMUN conference? </p>
 						<p> BayMUN is a local, one-day Bay Area conference which UC Berkeley Model United Nations hosts every semester on campus. We invite colleges from around the Bay Area to attend BayMUN, as well as members of the Berkeley campus. BayMUN serves as a training ground for our staff for the spring UCBMUN conference in San Francisco. It also provides our members  an opportunity to participate as debate delegates without needing to pay for associated conference travel costs. </p>
 						<hr>
-						<p> <bold> What is the UCBMUN conference?</bold></p>
+						<p style="font-weight: bold; important!"> What is the UCBMUN conference?</p>
 						<p> Each year, our club hosts a collegiate Model UN debate conference in the spring. All club members travel to the San Francisco Financial District for a weekend for the conference, and it is a unique bonding opportunity for our 100+ club members who help to staff the program. Members work on various debate committees and behind-the-scenes tasks, honing valuable leadership and professional skills. All hotel costs are fully covered for our members. </p>
 						<hr>
-						<p> <bold> Where does UCBMUN compete? </bold></p>
+						<p style="font-weight: bold; important!"> Where does UCBMUN compete? </p>
 						<p> Our club usually travels to ten or more debate conferences a year. Typically we will attend conferences at Georgetown, Boston University, McGill, University of Southern California, University of Pennsylvania, UNC Chapel Hill, Harvard, University of Chicago, University of Virginia, UC Santa Barbara, and UCLA. </p>
 						<hr>
-						<p> <bold> Is travel subsidized? </bold></p>
+						<p style="font-weight: bold; important!"> Is travel subsidized? </p>
 						<p> Yes, travel is partially subsidized for major conferences such as the Harvard, University of Chicago, and others. Unfortunately, members must pay out-of-pocket for most travel expenses. Members receive subsidization by earning subsidization points when they participate in the club’s debate training events. The club also maintains a database of scholarship and grant opportunities applicable for conference travel, and our treasurer offers informative consultations for any members applying to such grants. We understand that members face financial constraints and continually work to make travel as affordable as possible.</p>
 						<hr>
-						<p> <bold> How do I join? </bold></p>
+						<p style="font-weight: bold; important!">  How do I join? </p>
 						<p>  We accept members at the beginning of both the Fall and Spring semesters. Our application includes a written component followed by an interview round. </p>
 						<hr>
-						<p> <bold> Do I have to be a freshman to join? </bold></p>
+						<p style="font-weight: bold; important!"> Do I have to be a freshman to join? </p>
 						<p> No. We accept people from all years, even people going into their 4th year. However, you must be currently registered as a UC Berkeley student to apply. </p>
 						<hr>
-						<p> <bold> Do I have to be a Social Science major? </bold></p>
+						<p style="font-weight: bold; important!">  Do I have to be a Social Science major? </p>
 						<p> No. If you are interested in debate or international relations, then Model UN is a good place for you regardless of your major. Our members come from diverse range of backgrounds and our ranks host majors such as: EECS, Business, and Molecular & Cell Biology along with the more traditional: Economics, History, and Political Science backgrounds. </p>
 						<hr>
 					</div>
