--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <img src="images/conference.png" alt="Conferences" width="1100" height="500">
       <div class="carousel-caption d-md-block" style="background: #fff; opacity: .7">
         <h3>Conferences</h3>
-        <p style="color:black;">Each semester, we host one conference. In the fall, we have our high school conferenece, BearMUN, on campus and in the spring we welcome college students from around the world to our conference in San Fransicso. </p>
+        <p style="color:black;">Each semester, we host one conference. In the fall, we have our high school conference, BearMUN, on campus and in the spring we welcome college students from around the world to our conference in San Francisco. </p>
       </div>
     </div>
     <div class="carousel-item">
