--- a/leadership.html
+++ b/leadership.html
@@ -182,7 +182,7 @@
 									</div>
 									<div class="col">
 									  <div class="card">
-										<img src="images/stephen.jpg" class="card-img-top" alt="...">
+										<img src="images/stephen.jpeg" class="card-img-top" alt="...">
 										<div class="card-body">
 										  <h5 class="card-title">Stephen Saw</h5>
 										  <p class="card-text">Head Delegate, Generalized</p>
