--- a/careers.html
+++ b/careers.html
@@ -113,16 +113,16 @@
 								<div class="container">
 								    <div class="row">
 										<div class="3u">
-                                           <img src="images/careers/whitehouse.png" class="img-responsive" style='width:100%;' >
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/whitehouse.png" class="img-responsive" style='width:100%;' >
 										</div>
 										<div class="3u">
-                                           <img src="images/careers/dos.png" class="img-responsive" style='width:100%;'>
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/dos.png" class="img-responsive" style='width:100%;'>
 									    </div>
                                         <div class="3u">
-                                            <img src="images/careers/senate.png" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/senate.png" class="img-responsive" style='width:100%;'>
 									    </div>
                                         <div class="3u">
-                                            <img src="images/careers/USHOUSEREP.png" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/USHOUSEREP.png" class="img-responsive" style='width:100%;'>
 										</div>
 							         </div>
                                 </div>
@@ -130,16 +130,16 @@
                                 <div class="container">
 								    <div class="row">
 										<div class="3u">
-                                            <img src="images/careers/bain (1).png" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/bain (1).png" class="img-responsive" style='width:100%;'>
 										</div>
 										<div class="3u">
-                                            <img src="images/careers/bcg.jpeg" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/bcg.jpeg" class="img-responsive" style='width:100%;'>
 									    </div>
                                         <div class="3u">
-                                            <img src="images/careers/jpmorgan.jpeg" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/jpmorgan.jpeg" class="img-responsive" style='width:100%;'>
 									    </div>
                                         <div class="3u">
-                                            <img src="images/careers/deloitte.webp" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/deloitte.webp" class="img-responsive" style='width:100%;'>
 										</div>
 							         </div>
                                 </div>
@@ -147,16 +147,16 @@
 								<div class="container">
 								    <div class="row">
 										<div class="3u">
-                                           <img src="images/careers/harvard.png" class="img-responsive" style='width:100%;' >
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/harvard.png" class="img-responsive" style='width:100%;' >
 										</div>
 										<div class="3u">
-                                           <img src="images/careers/COLUMBIALAW.png" class="img-responsive" style='width:100%;'>
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/COLUMBIALAW.png" class="img-responsive" style='width:100%;'>
 									    </div>
                                         <div class="3u">
-                                            <img src="images/careers/UPENNLAW.gif" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/UPENNLAW.gif" class="img-responsive" style='width:100%;'>
 									    </div>
                                         <div class="3u">
-                                            <img src="images/careers/UCSF.png" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/UCSF.png" class="img-responsive" style='width:100%;'>
 										</div>
 							         </div>
                                 </div>
@@ -164,33 +164,16 @@
                                 <div class="container">
 								    <div class="row">
 										<div class="3u">
-                                           <img src="images/careers/google (2).png" class="img-responsive" style='width:100%;' >
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/google (2).png" class="img-responsive" style='width:100%;' >
 										</div>
 										<div class="3u">
-                                           <img src="images/careers/microsoft.png" class="img-responsive" style='width:100%;'>
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/microsoft.png" class="img-responsive" style='width:100%;'>
 									    </div>
                                         <div class="3u">
-                                            <img src="images/careers/facebook.png" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/facebook.png" class="img-responsive" style='width:100%;'>
 									    </div>
                                         <div class="3u">
-                                            <img src="images/careers/apple (1).png" class="img-responsive" style='width:100%;'>
-										</div>
-							         </div>
-                                </div>
-								<br><br>
-								<div class="container">
-								    <div class="row">
-										<div class="3u">
-                                           <img src="images/careers/CONRELLLAW.png" class="img-responsive" style='width:100%;' >
-										</div>
-										<div class="3u">
-                                           <img src="images/careers/NYULAW.png" class="img-responsive" style='width:100%;'>
-									    </div>
-                                        <div class="3u">
-                                            <img src="images/careers/Stanford-Center-for-Biomedical-Ethics-stacked-l-web.png" class="img-responsive" style='width:100%;'>
-									    </div>
-                                        <div class="3u">
-                                            <img src="images/careers/GEORGETOWN UNIVERSITY LAW CETNER.jpeg" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/apple (1).png" class="img-responsive" style='width:100%;'>
 										</div>
 							         </div>
                                 </div>
@@ -198,33 +181,16 @@
 								<div class="container">
 								    <div class="row">
 										<div class="3u">
-                                           <img src="images/careers/DOT.png" class="img-responsive" style='width:100%;' >
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/CONRELLLAW.png" class="img-responsive" style='width:100%;' >
 										</div>
 										<div class="3u">
-                                           <img src="images/careers/VERIZON.png" class="img-responsive" style='width:100%;'>
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/NYULAW.png" class="img-responsive" style='width:100%;'>
 									    </div>
                                         <div class="3u">
-                                            <img src="images/careers/MASSGENHOS.png" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/Stanford-Center-for-Biomedical-Ethics-stacked-l-web.png" class="img-responsive" style='width:100%;'>
 									    </div>
                                         <div class="3u">
-                                            <img src="images/careers/WTO.png" class="img-responsive" style='width:100%;'>
-										</div>
-							         </div>
-                                </div>
-								<br><br>
-								<div class="container">
-								    <div class="row">
-										<div class="3u">
-                                           <img src="images/careers/aei.png" class="img-responsive" style='width:100%;' >
-										</div>
-										<div class="3u">
-                                           <img src="images/careers/WELLINGTON.png" class="img-responsive" style='width:100%;'>
-									    </div>
-                                        <div class="3u">
-                                            <img src="images/careers/WSJ.png" class="img-responsive" style='width:100%;'>
-									    </div>
-                                        <div class="3u">
-                                            <img src="images/careers/BLACKROCK.png" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/GEORGETOWN UNIVERSITY LAW CETNER.jpeg" class="img-responsive" style='width:100%;'>
 										</div>
 							         </div>
                                 </div>
@@ -232,16 +198,50 @@
 								<div class="container">
 								    <div class="row">
 										<div class="3u">
-                                           <img src="images/careers/logo-oliver-wyman.png" class="img-responsive" style='width:100%;' >
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/DOT.png" class="img-responsive" style='width:100%;' >
 										</div>
 										<div class="3u">
-                                           <img src="images/careers/download.png" class="img-responsive" style='width:100%;'>
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/VERIZON.png" class="img-responsive" style='width:100%;'>
 									    </div>
                                         <div class="3u">
-                                            <img src="images/careers/Texas-Instruments-Brands-Logo-PNG-Transparent.png" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/MASSGENHOS.png" class="img-responsive" style='width:100%;'>
 									    </div>
                                         <div class="3u">
-                                            <img src="images/careers/World_Health_Organization_logo_logotype-700x207.png" class="img-responsive" style='width:100%;'>
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/WTO.png" class="img-responsive" style='width:100%;'>
+										</div>
+							         </div>
+                                </div>
+								<br><br>
+								<div class="container">
+								    <div class="row">
+										<div class="3u">
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/aei.png" class="img-responsive" style='width:100%;' >
+										</div>
+										<div class="3u">
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/WELLINGTON.png" class="img-responsive" style='width:100%;'>
+									    </div>
+                                        <div class="3u">
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/WSJ.png" class="img-responsive" style='width:100%;'>
+									    </div>
+                                        <div class="3u">
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/BLACKROCK.png" class="img-responsive" style='width:100%;'>
+										</div>
+							         </div>
+                                </div>
+								<br><br>
+								<div class="container">
+								    <div class="row">
+										<div class="3u">
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/logo-oliver-wyman.png" class="img-responsive" style='width:100%;' >
+										</div>
+										<div class="3u">
+                                           <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/download.png" class="img-responsive" style='width:100%;'>
+									    </div>
+                                        <div class="3u">
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/Texas-Instruments-Brands-Logo-PNG-Transparent.png" class="img-responsive" style='width:100%;'>
+									    </div>
+                                        <div class="3u">
+                                            <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/careers/World_Health_Organization_logo_logotype-700x207.png" class="img-responsive" style='width:100%;'>
 										</div>
 							         </div>
                                 </div>
