--- a/index.html
+++ b/index.html
@@ -183,28 +183,28 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/lamun.png" alt="Travel Team" width="1100" height="500">
+      <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/lamun.png" alt="Travel Team" width="1100" height="500">
       <div class="carousel-caption d-md-block" style="background: #fff; opacity: .7">
         <h3>Travel Team</h3>
         <p style="color:black;">Ranked #8 in the nation, travel is the backbone of our team and we take great pride in our success on the circuit. During their time in the club, our members gain key skills such as public speaking and critical thinking that prepare them for their careers.</p>
       </div>
       </div>
     <div class="carousel-item">
-      <img src="images/conference.png" alt="Conferences" width="1100" height="500">
+      <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/conference.png" alt="Conferences" width="1100" height="500">
       <div class="carousel-caption d-md-block" style="background: #fff; opacity: .7">
         <h3>Conferences</h3>
         <p style="color:black;">Each semester, we host one conference. In the fall, we have our high school conference, BearMUN, on campus and in the spring we welcome college students from around the world to our conference in San Francisco. </p>
       </div>
     </div>
     <div class="carousel-item">
-        <img src="images/conference.png" alt="Conferences" width="1100" height="500">
+        <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/socials.jpg" alt="Conferences" width="1100" height="500">
         <div class="carousel-caption d-md-block" style="background: #fff; opacity: .7">
           <h3>Community</h3>
           <p style="color:black;">For many of our members UCBMUN was their first community on campus and one which they stick with throughout their time in college. Through regular socials and mixers as well as organized trips and retreats, we always find a way to cherish each other's company.</p>
         </div>
       </div>
     <div class="carousel-item">
-      <img src="images/alumni.jpg" alt="Alumni/Careers" width="1100" height="500">
+      <img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/alumni.jpg" alt="Alumni/Careers" width="1100" height="500">
       <div class="carousel-caption d-md-block" style="background: #fff; opacity: .7">
         <h3>Alumni Network</h3>
         <p style="color:black;">Both current members and proud alumni flourish in a colorful variety of industries, ranging from management consulting to public policy.</p>
