--- a/leadership.html
+++ b/leadership.html
@@ -113,7 +113,7 @@
 								<div class="row row-cols-1 row-cols-md-3 g-4">
 									<div class="col">
 									  <div class="card">
-										<img src="images/vishwaa.png" class="card-img-top" alt="..." >
+										<img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/vishwaa.png" class="card-img-top" alt="..." >
 										<div class="card-body">
 										  <h5 class="card-title">Vishwaa Sofat</h5>
 										  <p class="card-text">President</p>
@@ -122,7 +122,7 @@
 									</div>
 									<div class="col">
 									  <div class="card">
-										<img src="images/sabina.png" class="card-img-top" alt="..." >
+										<img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/abina.png" class="card-img-top" alt="..." >
 										<div class="card-body">
 										  <h5 class="card-title">Sabina Dhillon</h5>
 										  <p class="card-text">Vice President </p>
@@ -131,7 +131,7 @@
 									</div>
 									<div class="col">
 									  <div class="card">
-										<img src="images/anya.jpeg" class="card-img-top" alt="...">
+										<img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/anya.jpeg" class="card-img-top" alt="...">
 										<div class="card-body">
 										  <h5 class="card-title">Anya Shah</h5>
 										  <p class="card-text"> Director of Finance </p>
@@ -143,16 +143,16 @@
 								  <div class="row row-cols-1 row-cols-md-3 g-4">
 									<div class="col">
 									  <div class="card">
-										<img src="images/priya.png" class="card-img-top" alt="...">
+										<img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/priya.png" class="card-img-top" alt="...">
 										<div class="card-body">
-										  <h5 class="card-title">Priya Sharma</h5>
+										  <h5 class="card-title">Supriya Sharma</h5>
 										  <p class="card-text">Secretary-General, UCBMUN</p>
 										</div>
 									  </div>
 									</div>
 									<div class="col">
 									  <div class="card">
-										<img src="images/kaito.JPG" class="card-img-top" alt="...">
+										<img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/kaito.JPG" class="card-img-top" alt="...">
 										<div class="card-body">
 										  <h5 class="card-title">Kaito Church</h5>
 										  <p class="card-text">Director-General, UCBMUN</p>
@@ -161,7 +161,7 @@
 									</div>
 									<div class="col">
 									  <div class="card">
-										<img src="images/sabrina.jpg" class="card-img-top" alt="...">
+										<img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/sabrina.jpg" class="card-img-top" alt="...">
 										<div class="card-body">
 										  <h5 class="card-title">Sabrina Baur</h5>
 										  <p class="card-text">Director of Travel</p>
@@ -173,7 +173,7 @@
 								  <div class="row row-cols-1 row-cols-md-3 g-4">
 									<div class="col">
 									  <div class="card">
-										<img src="images/caitlyn.jpeg" class="card-img-top" alt="...">
+										<img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/caitlyn.jpeg" class="card-img-top" alt="...">
 										<div class="card-body">
 										  <h5 class="card-title">Caitlyn Wilt</h5>
 										  <p class="card-text">Head Delegate, General Assemblies</p>
@@ -182,7 +182,7 @@
 									</div>
 									<div class="col">
 									  <div class="card">
-										<img src="images/stephen.jpeg" class="card-img-top" alt="...">
+										<img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/stephen.jpeg" class="card-img-top" alt="...">
 										<div class="card-body">
 										  <h5 class="card-title">Stephen Saw</h5>
 										  <p class="card-text">Head Delegate, Generalized</p>
@@ -191,7 +191,7 @@
 									</div>
 									<div class="col">
 									  <div class="card">
-										<img src="images/antonio.png" class="card-img-top" alt="...">
+										<img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/antonio.png" class="card-img-top" alt="...">
 										<div class="card-body">
 										  <h5 class="card-title">Antonio Martin</h5>
 										  <p class="card-text">Head Delegate, Crisis</p>
@@ -203,7 +203,7 @@
 								  <div class="row row-cols-1 row-cols-md-3 g-4">
 									<div class="col">
 									  <div class="card">
-										<img src="images/alejandro.png" class="card-img-top" alt="...">
+										<img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/alejandro.png" class="card-img-top" alt="...">
 										<div class="card-body">
 										  <h5 class="card-title">Alejandro Alvarez</h5>
 										  <p class="card-text">Secretary-General, BearMUN</p>
@@ -212,7 +212,7 @@
 									</div>
 									<div class="col">
 									  <div class="card">
-										<img src="images/danielle.jpeg" class="card-img-top" alt="...">
+										<img src="https://raw.githubusercontent.com/vsofat/ucbmun/main/images/danielle.jpeg" class="card-img-top" alt="...">
 										<div class="card-body">
 										  <h5 class="card-title">Danielle Kappler</h5>
 										  <p class="card-text">Director-General, BearMUN</p>
